# Hello-Agent-practice

./: .gitignore  README.md  main.py
clients/: OpenAICompatibleClient.py
lc/: main.py
lc/data/: emails_huawei.txt
lc/tools/: emails.py
prompts/: test1.template
rs/: Cargo.toml
rs/src/: main.rs
rs/src/common/: huaweiyun_download_data.rs  walk.rs
rs/src/email/: download.rs  email_parser.rs  mod.rs
rs/src/tools/: email_server.rs  huaweiyun_download_data.rs
rs/tests/: test_command.rs
weather/tools/: tools.py
